--- a/app/globals.css
+++ b/app/globals.css
@@ -72,4 +72,11 @@ body {
   .app-container {
     @apply container mx-auto px-4 sm:px-6 lg:px-8;
   }
+
+  .border-gradient {
+    border-width: 4px;
+    border-style: solid;
+    border-image: linear-gradient(to right, #ff7e5f, #feb47b);
+    border-image-slice: 1;
+  }
 }
