--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,11 @@ body {
     @apply container mx-auto px-4 sm:px-6 lg:px-8;
   }
 
+    /* Gradient Background */
+  .bg-gradient-brand-btn {
+    @apply bg-gradient-to-br from-brand-dark to-brand-darker;
+  }
+
   .border-gradient {
     border-width: 4px;
     border-style: solid;
